# esp32-esp-idf-samples

./: README.md
check-psram-size/firmware/sample_project/: sdkconfig  sdkconfig.old
check-psram-size/firmware/sample_project/main/: main.c
fatfs-crud/firmware/sample_project/main/: CMakeLists.txt  main.c
fatfs-readonly/firmware/sample_project/main/: CMakeLists.txt  main.c
http-client-request/firmware/sample_project/main/: main.c
http-server-websocket/firmware/sample_project/main/: CMakeLists.txt  main.c
load-files-to-flash/firmware/sample_project/: sdkconfig
load-files-to-flash/firmware/sample_project/main/: main.c
nvs-basic-read-write/firmware/sample_project/: sdkconfig.old
nvs-basic-read-write/firmware/sample_project/main/: CMakeLists.txt  main.c  push_button.h
nvs-custom-partition/firmware/sample_project/: sdkconfig
nvs-custom-partition/firmware/sample_project/main/: main.c
nvs-structured-data/firmware/sample_project/: sdkconfig.old
react-led-button/firmware/sample_project/: sdkconfig
react-on-esp32/firmware/sample_project/: react_website_partitions.csv
react-website-flashed/firmware/sample_project/: partitions.csv
sdcard-mmc/firmware/sample_project/: fat_partitions.csv  sdkconfig
sdcard-spi/firmware/sample_project/: sdkconfig.old
spiffs-load-files-binary/firmware/sample_project/main/: CMakeLists.txt
spiffs-loop-files-stats/firmware/sample_project/: sdkconfig  sdkconfig.old
wifi-example-connect/firmware/sample_project/: sdkconfig
wifi-http-server-mdns/firmware/sample_project/: sdkconfig
(+35 files in other folders)
